# exact_gui

./: README.md  exact.rb  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.cursor/rules/: tauri.mdc
.github/workflows/: semantic-release.yml
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: TransactionsTable.tsx
src/components/ui/: button.tsx  command.tsx  popover.tsx  table.tsx
